plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.0.0.RC2'
}

dependencyManagement {
    imports {
        mavenBom 'org.apache.logging.log4j:log4j-bom:2.8'
    }
}

group 'org.FFW'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'io.github.lzh0379:jdatepicker:2.0.3'
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.12'
    compile 'org.apache.logging.log4j:log4j-api'
    compile 'org.apache.logging.log4j:log4j-core'
    compile group: 'com.h2database', name: 'h2', version: '1.4.199'
    compile group: 'no.tornado.databinding', name: 'jxdatepicker-support', version: '1.0'

    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
    testCompile "org.mockito:mockito-core:2.+"
    testCompile("org.assertj:assertj-core:3.11.1")
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

java {
    sourceCompatibility = JavaVersion.VERSION_13
    targetCompatibility = JavaVersion.VERSION_13
}

test {
    useJUnitPlatform()
}